--- a/index.html
+++ b/index.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 
 <head>
   <meta charset="utf-8">
   <title>Luca's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/luca.png" alt="Luca Torresan profile picture"></td>
+      <td><img src="Images/luca.png" alt="Luca profile picture"></td>
       <td>
         <h1>Luca Torresan</h1>
-        <p><em>International Sales and Business Development at <strong><a href="https://www.ingentis.com/">Ingentis</a></strong></em></p>
-        <p>I am an italian professional working in IT HR. I support companies to choose the right solution for their organization, when it comes to visualizing HR data.</p>
+        <p>International Sales and Business Development at <strong><a href="https://www.ingentis.com">Ingentis</a></strong></p>
+        <p><em>I am an Italian professional specialised in IT pre-sales and consulting <br>
+            I have gathered serveral years of International experience by working for more than 5 years in Germany </em></p>
       </td>
     </tr>
   </table>
-
   <hr>
   <h3>Education</h3>
   <ul>
-    <li><a href="https://www.fau.eu/">FAU University Erlangen-Nuremberg</a></li>
-    <li><a href="https://www.unive.it/pag/13526/">Ca' Foscari University of Venice</a></li>
-    <li><a href="http://www.liceodaponte.edu.it/">Liceo Scientifico Jacopo Da Ponte</a></li>
+    <li><a href="https://www.fau.eu/">FAU Uiversity Erlangen-Nürnberg</a> | Master of Science in International Business Studies <br>
+      <em>Master Thesis: "A peer-to-peer alternative in the context of B2C location-based crowdsourcing platforms"</em><br><br>
+    </li>
+    <li><a href="https://www.unive.it/">Ca'Foscari University of Venice</a> | Bachelor of Science in Businss Administration<br>
+      <em>Bachelor Thesis: "The funding policies during the crisis in the construction industry: the Carron S.p.A. case"</em><br><br>
+    </li>
+    <li><a href="http://www.liceodaponte.edu.it/">Liceo Scientifico Jacopo Da Ponte</a> | High school degree for university entrance</li>
   </ul>
   <hr>
   <h3>Work Experience</h3>
-  <table cellspacing="10">
+  <table cellspacing="20">
     <thead>
       <tr>
         <th>Dates</th>
@@ -36,43 +42,84 @@
     </thead>
     <tbody>
       <tr>
-        <td>07/2010 - 06/2011</td>
-        <td>Office Assistant at Athos SaS</td>
+        <td>2018-Today</td>
+        <td>Ingentis | International Sales and Business Deveopment</td>
       </tr>
       <tr>
-        <td>04/2013 - 11/2013</td>
-        <td>Bachelor Thesis at Carron spa</td>
+        <td>
+
+        </td>
+        <td>
+          Perform product demonstrations<br>
+          Collaborate with HR and IT managers to define, design, and detail the technical aspects and feasibility of proposed solutions <br>
+          Scope and deliver effective PoC <br>
+          Respond to RFI/RFP/RFQ/SOW/Tenders <br>
+          Support partners
+        </td>
       </tr>
       <tr>
-        <td>06/2013 - 07/2013</td>
-        <td>Intern Accounting at Giulio Rech</td>
+        <td>2017-2018</td>
+        <td>Streetspotr | Sales and Projekt Manager Italy</td>
+      </tr>
+      <tr>
+        <td>
+
+        </td>
+        <td>
+          Outbound/Inbound prospecting<br>
+          Conduct product presentation and demonstration<br>
+          Set up pilot projects, tailored according to client's needs <br>
+          Prepare client's quotations/estimations/orders
+        </td>
+      </tr>
+      <tr>
+        <td>2015-2017</td>
+        <td>Streetspotr | Working Student - Quality Assurance and Project Management</td>
+      </tr>
+      <tr>
+        <td>
+
+        </td>
+        <td>
+          Outbound/Inbound prospecting<br>
+          Conduct product presentation and demonstration<br>
+          Set up pilot projects, tailored according to client's needs <br>
+          Prepare client's quotations/estimations/orders
+        </td>
+      </tr>
+      <tr>
+        <td>2013-2013</td>
+        <td>Carron | Bachelor Thesis</td>
       </tr>
     </tbody>
   </table>
   <hr>
-  <h3>Skills</h3>
+  <h3>Language Skills</h3>
   <table cellspacing="10">
     <tr>
-      <td>Sales</td>
-      <td>⭐⭐⭐⭐⭐</td>
+      <td>Italian</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
     </tr>
     <tr>
-      <td>Business Development</td>
-      <td>⭐⭐⭐⭐⭐</td>
+      <td>English</td>
+      <td>⭐️⭐️⭐️⭐️</td>
     </tr>
     <tr>
-      <td>Market Research</td>
-      <td>⭐⭐⭐⭐</td>
+      <td>German</td>
+      <td>⭐️⭐️⭐️⭐️</td>
     </tr>
     <tr>
-      <td>Marketing</td>
-      <td>⭐⭐⭐</td>
+      <td>Spanish</td>
+      <td>⭐️⭐️⭐️</td>
+    </tr>
+    <tr>
+      <td>French</td>
+      <td>⭐️</td>
     </tr>
   </table>
   <hr>
   <a href="Hobbies.html">My Hobbies</a>
   <a href="Contact.html">Contact Me</a>
-  <hr>
 </body>
 
 </html>
